chore: Fixed the entire over look of the project. - Project Flow - Quotes Flow - Material List Flow - Settings Pages etc

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,9 +23,7 @@ body {
 }
 
 /* Utility classes */
-.hidden {
-  display: none !important;
-}
+/* Note: .hidden is provided by Tailwind CSS, so we don't define it here */
 
 .sr-only {
   position: absolute;
